--- a/Everpobre/Base.lproj/Main.storyboard
+++ b/Everpobre/Base.lproj/Main.storyboard
@@ -1,24 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vNO-Zz-v5D">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Notebooks-->
+        <scene sceneID="4FJ-be-ga4">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="tzV-97-4S9" customClass="NotebookListViewController" customModule="Everpobre" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Uj-Tv-vMI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cjr-pa-60w">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="NotebookListCell" rowHeight="84" id="wG1-4V-brH" customClass="NotebookListCell" customModule="Everpobre" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="84"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wG1-4V-brH" id="lOF-FJ-QbW">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="83.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e3B-kS-Awk">
+                                                    <rect key="frame" x="10" y="10" width="322" height="63.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notebook" translatesAutoresizingMaskIntoConstraints="NO" id="aW0-pK-N7o">
+                                                            <rect key="frame" x="0.0" y="0.0" width="63.5" height="63.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="aW0-pK-N7o" secondAttribute="height" multiplier="1:1" id="QGF-wh-P0m"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OvN-2f-Ra7">
+                                                            <rect key="frame" x="71.5" y="0.0" width="250.5" height="63.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notebook Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3df-ez-SgR">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="250.5" height="28"/>
+                                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creation Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z84-S5-zPf">
+                                                                    <rect key="frame" x="0.0" y="36" width="250.5" height="27.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="e3B-kS-Awk" secondAttribute="bottom" constant="10" id="2iv-Dl-CEy"/>
+                                                <constraint firstItem="e3B-kS-Awk" firstAttribute="top" secondItem="lOF-FJ-QbW" secondAttribute="top" constant="10" id="OOj-rv-De6"/>
+                                                <constraint firstItem="e3B-kS-Awk" firstAttribute="leading" secondItem="lOF-FJ-QbW" secondAttribute="leading" constant="10" id="i3U-f7-XxP"/>
+                                                <constraint firstAttribute="trailing" secondItem="e3B-kS-Awk" secondAttribute="trailing" constant="10" id="ohh-xH-UkO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="creationDateLabel" destination="Z84-S5-zPf" id="uEk-3U-vtA"/>
+                                            <outlet property="titleLabel" destination="3df-ez-SgR" id="mxG-Za-Hug"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="tzV-97-4S9" id="foS-Az-V0W"/>
+                                    <outlet property="delegate" destination="tzV-97-4S9" id="bYD-2b-l9D"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cjr-pa-60w" firstAttribute="top" secondItem="zju-O7-pTd" secondAttribute="top" id="5Ex-Hl-niv"/>
+                            <constraint firstItem="zju-O7-pTd" firstAttribute="bottom" secondItem="cjr-pa-60w" secondAttribute="bottom" id="Zfr-ug-HZj"/>
+                            <constraint firstItem="zju-O7-pTd" firstAttribute="trailing" secondItem="cjr-pa-60w" secondAttribute="trailing" id="hNe-iN-xW6"/>
+                            <constraint firstItem="cjr-pa-60w" firstAttribute="leading" secondItem="zju-O7-pTd" secondAttribute="leading" id="tM1-zp-VXH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zju-O7-pTd"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Notebooks" id="wIw-yf-2yY"/>
+                    <connections>
+                        <outlet property="tableView" destination="cjr-pa-60w" id="8JT-yM-2rd"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vNX-Ui-SjJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="648.79999999999995" y="146.17691154422789"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="roj-Oa-58G">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vNO-Zz-v5D" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Mlg-aY-HEx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tzV-97-4S9" kind="relationship" relationship="rootViewController" id="yjx-jK-Jh5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PEu-5K-38M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-290.39999999999998" y="146.17691154422789"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="notebook" width="64" height="64"/>
+    </resources>
 </document>
