--- a/Everpobre/Base.lproj/Main.storyboard
+++ b/Everpobre/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cjr-pa-60w">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="582.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="NotebookListCell" rowHeight="84" id="wG1-4V-brH" customClass="NotebookListCell" customModule="Everpobre" customModuleProvider="target">
@@ -29,26 +29,24 @@
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="83.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e3B-kS-Awk">
-                                                    <rect key="frame" x="10" y="10" width="322" height="63.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="e3B-kS-Awk">
+                                                    <rect key="frame" x="10" y="10" width="243" height="68"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notebook" translatesAutoresizingMaskIntoConstraints="NO" id="aW0-pK-N7o">
-                                                            <rect key="frame" x="0.0" y="0.0" width="63.5" height="63.5"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="aW0-pK-N7o" secondAttribute="height" multiplier="1:1" id="QGF-wh-P0m"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="0.0" y="0.0" width="64" height="68"/>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OvN-2f-Ra7">
-                                                            <rect key="frame" x="71.5" y="0.0" width="250.5" height="63.5"/>
+                                                            <rect key="frame" x="72" y="0.0" width="171" height="68"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notebook Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3df-ez-SgR">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="250.5" height="28"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="171" height="30"/>
                                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creation Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z84-S5-zPf">
-                                                                    <rect key="frame" x="0.0" y="36" width="250.5" height="27.5"/>
+                                                                    <rect key="frame" x="0.0" y="38" width="171" height="30"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -58,12 +56,6 @@
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="e3B-kS-Awk" secondAttribute="bottom" constant="10" id="2iv-Dl-CEy"/>
-                                                <constraint firstItem="e3B-kS-Awk" firstAttribute="top" secondItem="lOF-FJ-QbW" secondAttribute="top" constant="10" id="OOj-rv-De6"/>
-                                                <constraint firstItem="e3B-kS-Awk" firstAttribute="leading" secondItem="lOF-FJ-QbW" secondAttribute="leading" constant="10" id="i3U-f7-XxP"/>
-                                                <constraint firstAttribute="trailing" secondItem="e3B-kS-Awk" secondAttribute="trailing" constant="10" id="ohh-xH-UkO"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="creationDateLabel" destination="Z84-S5-zPf" id="uEk-3U-vtA"/>
@@ -76,13 +68,33 @@
                                     <outlet property="delegate" destination="tzV-97-4S9" id="bYD-2b-l9D"/>
                                 </connections>
                             </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-XD-eWw">
+                                <rect key="frame" x="0.0" y="646.5" width="375" height="20.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Total de Notebooks:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aen-aO-a9K">
+                                        <rect key="frame" x="0.0" y="0.0" width="333.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXX" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HSm-hO-Ldg">
+                                        <rect key="frame" x="341.5" y="0.0" width="33.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cjr-pa-60w" firstAttribute="top" secondItem="zju-O7-pTd" secondAttribute="top" id="5Ex-Hl-niv"/>
-                            <constraint firstItem="zju-O7-pTd" firstAttribute="bottom" secondItem="cjr-pa-60w" secondAttribute="bottom" id="Zfr-ug-HZj"/>
-                            <constraint firstItem="zju-O7-pTd" firstAttribute="trailing" secondItem="cjr-pa-60w" secondAttribute="trailing" id="hNe-iN-xW6"/>
-                            <constraint firstItem="cjr-pa-60w" firstAttribute="leading" secondItem="zju-O7-pTd" secondAttribute="leading" id="tM1-zp-VXH"/>
+                            <constraint firstItem="zju-O7-pTd" firstAttribute="trailing" secondItem="5rh-XD-eWw" secondAttribute="trailing" id="2xG-MZ-xV8"/>
+                            <constraint firstItem="5rh-XD-eWw" firstAttribute="bottom" secondItem="zju-O7-pTd" secondAttribute="bottom" id="ACG-DM-uMO"/>
+                            <constraint firstItem="5rh-XD-eWw" firstAttribute="leading" secondItem="zju-O7-pTd" secondAttribute="leading" id="JR7-cE-ZOq"/>
+                            <constraint firstItem="cjr-pa-60w" firstAttribute="leading" secondItem="zju-O7-pTd" secondAttribute="leading" id="Rul-KE-5kH"/>
+                            <constraint firstItem="cjr-pa-60w" firstAttribute="trailing" secondItem="zju-O7-pTd" secondAttribute="trailing" id="Y73-px-2Xv"/>
+                            <constraint firstItem="cjr-pa-60w" firstAttribute="top" secondItem="zju-O7-pTd" secondAttribute="top" id="nqA-tF-2ab"/>
+                            <constraint firstItem="5rh-XD-eWw" firstAttribute="top" secondItem="cjr-pa-60w" secondAttribute="bottom" id="pVJ-nU-Bj3"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zju-O7-pTd"/>
                     </view>
@@ -95,6 +107,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="cjr-pa-60w" id="8JT-yM-2rd"/>
+                        <outlet property="totalLabel" destination="HSm-hO-Ldg" id="SIm-Ls-PBx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vNX-Ui-SjJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
